--- a/app/views/appellant-submission/v12/full/procedure-type/decide.html
+++ b/app/views/appellant-submission/v12/full/procedure-type/decide.html
@@ -25,7 +25,7 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Tell us how you would like us to decide your appeal
+          Tell us how you would prefer us to decide your appeal
         </span>
         
         {{ govukRadios({
