--- a/app/views/appellant-submission/v12/full/task-list.html
+++ b/app/views/appellant-submission/v12/full/task-list.html
@@ -80,7 +80,7 @@
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a href="procedure-type/decide">
-                Tell us how you would like us to decide your appeal
+                Tell us how you would prefer us to decide your appeal
               </a>
             </span>
             {% if data["appealsub-"+version+"-taskliststatus-proceduretype"] == "Complete" %}
