added CYA ticket to appeal submission v12

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,7 +67,7 @@
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (4)
+                          Jira Tickets (5)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
@@ -76,6 +76,7 @@
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-3706">AS-3706 Drag and drop and multiple file uploads to be more obvious</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4053">AS-4053 Addition of procedure questions to Planning Appeal form</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4057">AS-4057 Addition of Costs question to Planning Appeal form</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4319">AS-4319 Updates to check your answers</a></li>
                         </ul>
                       </div>
                     </details>
