--- a/app/views/interested-party/v1/appeal-search-no-results.html
+++ b/app/views/interested-party/v1/appeal-search-no-results.html
@@ -1,7 +1,9 @@
 {% set pageref = "###" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Commenting on an appeal" %}
+{% set serviceName = "Appeal a planning decision" %}
+{% set subServiceName = "Comment on an appeal" %}
+
 {% set title = "Search for an appeal" %}
 
 {% block pageTitle %}
@@ -15,6 +17,11 @@
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
+
+  {{ govukBackLink({
+    text: "Back",
+    href: "javascript:history.go(-1);"
+  }) }}
 {% endblock %}
 
 {% block content %}
@@ -22,13 +29,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-l">{{ serviceName }}</span>
+    <span class="govuk-caption-l">{{ subServiceName }}</span>
     <h1 class="govuk-heading-l">
       {{ title }}
     </h1>
 
     <p class="govuk-body-l">
-      We didn’t find any appeals using that code.
+      We didn’t find any appeals using that appeal reference number.
     </p>
 
     <p class="govuk-body">
