Interested parties check and change logic + index links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -237,56 +237,55 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                   <li>
-                    <a href="/interested-party/v1/householder-appeal-first-notice">Householder appeal first notice (email)</a>
+                    <a href="/interested-party/v1/householder-appeal-first-notice" class="govuk-link--no-visited-state">Householder appeal first notice (email)</a>
                   </li>
                   <li>
-                    <a href="/interested-party/v1/full-planning-appeal-first-notice">Full Planning appeal first notice (email)</a>
+                    <a href="/interested-party/v1/full-planning-appeal-first-notice" class="govuk-link--no-visited-state">Full Planning appeal first notice (email)</a>
                   </li>
 
                   <br>
                   <li>
-                    <a href="/interested-party/v1/guidance">
+                    <a href="/interested-party/v1/guidance" class="govuk-link--no-visited-state">
                       Guidance for commenting on an appeal
                     </a>
                   </li>
                   <li>
-                    <a href="/interested-party/v1/appeal-search">
+                    <a href="/interested-party/v1/appeal-search" class="govuk-link--no-visited-state">
                       Search for an appeal
                     </a>
                   </li>
-                  <li>
+
+
+                  <!-- <li>
                     <a href="/interested-party/v1/appeal-search-results">
                       Appeal results
                     </a>
-                  </li>
+                  </li> -->
                   <li>
-                    <a href="/interested-party/v1/appeal-search-no-results">
+                    <a href="/interested-party/v1/appeal-search-no-results" class="govuk-link--no-visited-state">
                       No results
                     </a>
                   </li>
                   <li>
-                    <!-- <a href="/interested-party/v1/appeal">Appeal public/IP view</a> -->
-                    Appeal public/IP view
+                    <a href="/interested-party/v1/appeal-details?status=1" class="govuk-link--no-visited-state">Active appeal details</a>
                   </li>
                   <li>
-                    <!-- <a href="/interested-party/v1/your-name">Your name</a> -->
-                    Your name
+                    <a href="/interested-party/v1/appeal-details?status=" class="govuk-link--no-visited-state">Closed appeal details</a>
                   </li>
                   <li>
-                    <!-- <a href="/interested-party/v1/appeal-add-comment-email">Your email address</a> -->
-                    Your email address
+                    <a href="/interested-party/v1/appeal-comment-name?checking=" class="govuk-link--no-visited-state">Your full name</a>
                   </li>
                   <li>
-                    <!-- <a href="/interested-party/v1/appeal-add-comment">Add comment</a> -->
-                    Add comment
+                    <a href="/interested-party/v1/appeal-comment-email?checking=" class="govuk-link--no-visited-state">Your email address</a>
                   </li>
                   <li>
-                    <!-- <a href="/interested-party/v1/appeal-add-comment-check-email">Check your answers</a> -->
-                    Check your answers
+                    <a href="/interested-party/v1/comment-upload" class="govuk-link--no-visited-state">Upload comment</a>
                   </li>
                   <li>
-                    <!-- <a href="/interested-party/v1/appeal-add-comment-confirmed">Confirmation</a> -->
-                    Comment received confirmation
+                    <a href="/interested-party/v1/check-answers" class="govuk-link--no-visited-state">Check your answers</a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v1/comment-received" class="govuk-link--no-visited-state">Confirmation</a>
                   </li>
                   <li>
                     <!-- <a href="/interested-party/v1/appeal-ip-comment-added-notify">Notify message about comment</a> -->
