--- a/app/views/interested-party/v1/appeal-details.html
+++ b/app/views/interested-party/v1/appeal-details.html
@@ -153,7 +153,7 @@
         </h2>
 
         <p class="govuk-body">
-          <a href="appeal-comment-name" class="govuk-link govuk-link--no-visited-state">
+          <a href="appeal-comment-name?checking=" class="govuk-link govuk-link--no-visited-state">
             Comment on this appeal
           </a>
         </p>
