--- a/app/views/interested-party/v1/check-answers.html
+++ b/app/views/interested-party/v1/check-answers.html
@@ -56,7 +56,7 @@
             Sam Phipps
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
+            <a class="govuk-link" href="appeal-comment-name?checking=1">
               Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
@@ -70,7 +70,7 @@
             samphips@email.com
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
+            <a class="govuk-link" href="appeal-comment-email?checking=1">
               Change<span class="govuk-visually-hidden"> address</span>
             </a>
           </dd>
@@ -83,7 +83,7 @@
             <p class="govuk-body">Avenue appeal comments - 12 Jan 2022.txt (0.21MB file)</p>
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
+            <a class="govuk-link" href="comment-upload?checking=1">
               Change<span class="govuk-visually-hidden"> contact details</span>
             </a>
           </dd>
