--- a/app/views/interested-party/v1/comment-received.html
+++ b/app/views/interested-party/v1/comment-received.html
@@ -34,7 +34,7 @@
           {{ title }}
         </h1>
         <div class="govuk-panel__body">
-          Your comment will be included in the appeal, <br><strong>1234567</strong>
+          Your comment will be included in appeal number <strong>1234567</strong>.
         </div>
       </div>
 
