--- a/app/views/index.html
+++ b/app/views/index.html
@@ -267,13 +267,24 @@
                     </a>
                   </li>
                   <li>
-                    <a href="/interested-party/v1/appeal-details?status=1" class="govuk-link--no-visited-state">Active appeal details</a>
+                    <a href="/interested-party/v1/appeal-details?status=open" class="govuk-link--no-visited-state">
+                      Appeal open for comments
+                    </a>
                   </li>
                   <li>
-                    <a href="/interested-party/v1/appeal-details?status=" class="govuk-link--no-visited-state">Closed appeal details</a>
+                    <a href="/interested-party/v1/appeal-details?status=closed" class="govuk-link--no-visited-state">
+                      Appeal closed for comments
+                    </a>
                   </li>
                   <li>
-                    <a href="/interested-party/v1/appeal-comment-name?checking=" class="govuk-link--no-visited-state">Your full name</a>
+                    <a href="/interested-party/v1/appeal-details?status=completed" class="govuk-link--no-visited-state">
+                      Appeal closed
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/interested-party/v1/appeal-comment-name?checking=" class="govuk-link--no-visited-state">
+                      Your full name
+                    </a>
                   </li>
                   <li>
                     <a href="/interested-party/v1/appeal-comment-email?checking=" class="govuk-link--no-visited-state">Your email address</a>
