--- a/app/views/final-comments/v1/lpd/check-your-answers.html
+++ b/app/views/final-comments/v1/lpd/check-your-answers.html
@@ -33,7 +33,7 @@
             Final comments
           </dt>
           <dd class="govuk-summary-list__value">
-            <a href="javascript:preventDefault();">{{ data["finalcomments-"+version+"-appellant-upload"] }}</a>
+            <a href="javascript:preventDefault();">{{ data["finalcomments-"+version+"-lpd-upload"] }}</a>
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="index">
@@ -55,7 +55,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-      {% include "final-comments/"+version+"/_appellant-details.html" %} 
+      {% include "final-comments/"+version+"/_agent-details.html" %} 
     </div>
   </div>
 {% endblock %}
