--- a/app/views/index.html
+++ b/app/views/index.html
@@ -853,19 +853,19 @@
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
-                <span class="govuk-accordion__section-button" id="accordion-default-heading-finalcomments">
-                  Final Comments
+                <span class="govuk-accordion__section-button" id="accordion-default-heading-statementofcase">
+                  Statement of case
                 </span>
               </h2>
             </div>
-            <div id="accordion-default-content-finalcomments" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-finalcomments">
+            <div id="accordion-default-content-statementofcase" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-statementofcase">
 
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     <h3 class="govuk-heading-m">
-                      Appellant final comments v1
+                      Statement of case v1
                       {{ govukTag({
                         classes: "govuk-tag--red govuk-!-margin-left-1",
                         text: "WIP"
@@ -873,10 +873,18 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/final-comments/v1/appellant" title="">Upload final comments</a>
-                      </li><br>
+                        <a href="/statement-of-case/v1/" title="">Upload statement of case comments</a>
+                      </li>
+                    </ul>
+                    <h4 class="govuk-heading-sm">
+                      Shutter pages
+                    </h4>
+                    <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/final-comments/v1/appellant/shutter/cannot-submit-yet" title="">Shutter - Cannot submit yet</a>
+                        <a href="/statement-of-case/v1/shutter/deadline-passed" title="">Your deadline has passed</a>
+                      </li>
+                      <li>
+                        <a href="/statement-of-case/v1/shutter/already-submitted" title="">Statement of case already submitted</a>
                       </li>
                     </ul>
 
@@ -904,6 +912,85 @@
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-xxxx">AS-xxxx </a></li>
+                        </ul>
+                      </div>
+                    </details>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="govuk-accordion__section">
+            <div class="govuk-accordion__section-header">
+              <h2 class="govuk-accordion__section-heading">
+                <span class="govuk-accordion__section-button" id="accordion-default-heading-finalcomments">
+                  Final Comments
+                </span>
+              </h2>
+            </div>
+            <div id="accordion-default-content-finalcomments" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-finalcomments">
+
+              <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    <h3 class="govuk-heading-m">
+                      Final comments v1
+                      {{ govukTag({
+                        classes: "govuk-tag--red govuk-!-margin-left-1",
+                        text: "WIP"
+                      }) }}
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/final-comments/v1/appellant" title="">Appellant - Upload final comments</a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v1/agent" title="">Agent - Upload final comments</a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v1/lpd" title="">Local planning department - Upload final comments</a>
+                      </li>
+                    </ul>
+                    <h4 class="govuk-heading-sm">
+                      Shutter pages
+                    </h4>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/final-comments/v1/shutter/cannot-submit-yet" title="">Cannot submit yet</a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v1/shutter/deadline-passed" title="">Your deadline has passed</a>
+                      </li>
+                    </ul>
+
+                    <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          User research (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list--bullet">
+                          <li>
+                            <a href="https://miro.com/app/board/o9J_llyHSqU=/?moveToWidget=3074457367196007929&cot=14" target="blank" title="">User research notes (Miro)</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </details-->
+
+                    <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                      <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                          Jira Tickets (1)
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <ul class="govuk-list govuk-list-bulleted">
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4250">AS-4250 Final Comments submission form - appellant/agent</a></li>
                         </ul>
                       </div>
                     </details>
