Statement of case v1

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -883,9 +883,6 @@
                       <li>
                         <a href="/statement-of-case/v1/shutter/deadline-passed" title="">Your deadline has passed</a>
                       </li>
-                      <li>
-                        <a href="/statement-of-case/v1/shutter/already-submitted" title="">Statement of case already submitted</a>
-                      </li>
                     </ul>
 
                     <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
@@ -906,12 +903,12 @@
                     <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (X)
+                          Jira Tickets (1)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
-                          <li><a href="https://pins-ds.atlassian.net/browse/AS-xxxx">AS-xxxx </a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4241">AS-4241 LPD Statement of Case submission</a></li>
                         </ul>
                       </div>
                     </details>
@@ -985,12 +982,13 @@
                     <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (1)
+                          Jira Tickets (2)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4250">AS-4250 Final Comments submission form - appellant/agent</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4251">AS-4251 Final Comments submission form - LPD</a></li>
                         </ul>
                       </div>
                     </details>
