--- a/app/views/final-comments/v1/lpd/check-your-answers.html
+++ b/app/views/final-comments/v1/lpd/check-your-answers.html
@@ -55,7 +55,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-      {% include "final-comments/"+version+"/_agent-details.html" %} 
+      {% include "final-comments/"+version+"/_lpd-details.html" %} 
     </div>
   </div>
 {% endblock %}
