Final comments and statement of case

--- a/app/views/statement-of-case/v1/check-your-answers.html
+++ b/app/views/statement-of-case/v1/check-your-answers.html
@@ -33,7 +33,7 @@
             Statement of case
           </dt>
           <dd class="govuk-summary-list__value">
-            <a href="javascript:preventDefault();">{{ data["finalcomments-"+version+"-lpd-upload"] }}</a>
+            <a href="javascript:preventDefault();">{{ data["statementofcase-"+version+"-upload"] }}</a>
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:history.go(-1);">
