--- a/app/views/index.html
+++ b/app/views/index.html
@@ -867,8 +867,8 @@
                     <h3 class="govuk-heading-m">
                       Statement of case v1
                       {{ govukTag({
-                        classes: "govuk-tag--red govuk-!-margin-left-1",
-                        text: "WIP"
+                        classes: "govuk-tag--green govuk-!-margin-left-1",
+                        text: "Ready for UR"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
@@ -937,8 +937,8 @@
                     <h3 class="govuk-heading-m">
                       Final comments v1
                       {{ govukTag({
-                        classes: "govuk-tag--red govuk-!-margin-left-1",
-                        text: "WIP"
+                        classes: "govuk-tag--green govuk-!-margin-left-1",
+                        text: "Ready for UR"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
